--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <div>
         <!-- home -->
-        <section class="relative w-full h-screen">
+    <section class="relative w-full h-screen">
             <div class="w-full h-screen bg-[url(./media/home_img.jpg)] absolute inset-0 bg-cover z-0"></div>
             <!-- black overlay -->
             <div class="absolute inset-0 z-0 bg-gradient-to-b from-black/80 via-black/65 to-black/80"></div>
@@ -62,8 +62,7 @@
                 </div>
             </div>
             <!-- Heading section -->
-            <div
-                class="px-2 py-1 h-auto " id="home-head">
+            <div class="px-2 py-1 h-auto " id="home-head">
                 <div class="flex flex-col items-center ">
                     <h1 class="text-white text-6xl text-center font-bold tracking-tight">Unlimited movies, TV shows, and more</h1>
                     <h4 class="text-white text-xl font-bold text-center leading-[75px]">Starts at AED 35. Cancel
@@ -71,14 +70,9 @@
                     <h6 class="text-white text-md text-center mt-3 ">Ready to watch? Enter your email to create or
                         restart
                         your membership.</h6>
-
                     <div class="flex mt-3 w-full item-center justify-center">
                         <input type="email" placeholder="Email address"
-                            class="w-[50%] px-3 py-3 bg-transparent border border-gray-600 !border-[#8c8c8c] placeholder:opacity-95 text-white placeholder-[#8c8c8c] text-semibold rounded-sm focus:outline-none focus:ring-1 focus:ring-white focus:ring-offset-1 focus:ring-offset-black" />
-
-
-
-
+                            class="w-[50%] px-3 py-3 bg-transparent border border-gray-600 !border-[#8c8c8c] placeholder:opacity-95 text-white placeholder-[#8c8c8c] text-semibold rounded-md focus:outline-none focus:ring-1 focus:ring-white focus:ring-offset-1 focus:ring-offset-black" />
                         <button
                             class="bg-red-600 font-semibold text-2xl text-white px-[1rem] py-[0.35rem] text-center hover:bg-red-700 transition w-[25%] flex items-center justify-center mx-2"
                             style="border-radius: 0.3rem;">
@@ -86,17 +80,22 @@
                         </button>
                     </div>
                 </div>
-
             </div>
     </div>
-
     </section>
 
+    <!-- full section -->
+    <section>
+     <div class="w-full h-auto bg-indigo-950">
+            <!-- carousel div -->
+            <div>
+                <h1>l</h1>
+            </div>
+     </div>
 
 
 
-
-
+    </section>
     <!-- last div -->
     </div>
 </body>
