--- a/index.html
+++ b/index.html
@@ -137,11 +137,9 @@
                         <!-- SVG overlay -->
                         <svg class="absolute -bottom-1 -left-6 z-10" width="120" height="120"
                             xmlns="http://www.w3.org/2000/svg">
-                            <text md:x="-2" x="4" y="80" fill="black" stroke="white" md:font-size="100" font-size="60"
-                                font-weight="900">1</text>
+                            <text x="-2" y="80" fill="black" stroke="white" font-size="100" font-weight="900">1</text>
                         </svg>
                     </div>
-
 
                     <div
                         class="relative inline-block overflow-visible group transition-transform duration-300 ease-in-out hover:scale-105">
@@ -150,8 +148,7 @@
                         <!-- SVG overlay -->
                         <svg class="absolute -bottom-1 -left-6 z-10" width="120" height="120"
                             xmlns="http://www.w3.org/2000/svg">
-                            <text md:x="-2" x="4" y="80" fill="black" stroke="white" md:font-size="100" font-size="60"
-                                font-weight="900">2</text>
+                            <text x="-2" y="80" fill="black" stroke="white" font-size="100" font-weight="900">2</text>
                         </svg>
                     </div>
 
@@ -190,7 +187,59 @@
 
                 </div>
             </div>
+
+            <!-- more reasons -->
+            <div class="relative z-5 pt-20 px-4 md:!px-40">
+                <h2 class="text-white font-semibold md:text-2xl text-lg">More Reasons to Join</h2>
+            </div>
+            <div class="grid md:grid-cols-4 grid-cols-1 md:!px-40 px-4  py-3 gap-3">
+                <div class=" md:w-[18rem] w-full bg-gradient-to-br from-[#293458] via-#293458 to-[#2b012e] rounded-xl shadow-lg text-white p-4">
+                    <h5 class="text-xl font-semibold mb-2">Enjoy on your TV</h5>
+                    <p class="text-[15px] text-neutral-200 pt-2">
+                        Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.
+                    </p>
+                    <div class="flex justify-end pt-5">
+                        <img src="./media/tv.png" alt="tv" width="50px">
+                    </div>
+                </div>
+
+
+                 <div class="md:w-[18rem] w-full bg-gradient-to-br from-[#293458] via-#293458 to-[#2b012e] rounded-xl shadow-lg text-white p-4">
+                    <h5 class="text-xl font-semibold mb-2">Download your shows to watch offline</h5>
+                    <p class="text-[15px] text-neutral-200 pt-2">
+                        Save your favorites easily and always have something to watch.
+                    </p>
+                    <div class="flex justify-end pt-5">
+                        <img src="./media/arro.png" alt="arrow" width="45px">
+                    </div>
+                </div>
+
+
+                 <div class="md:w-[18rem] w-full bg-gradient-to-br from-[#293458] via-#293458 to-[#2b012e] rounded-xl shadow-lg text-white p-4">
+                    <h5 class="text-xl font-semibold mb-2">Watch everywhere</h5>
+                    <p class="text-[15px] text-neutral-200 pt-2">
+                        Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.
+                    </p>
+                    <div class="flex justify-end pt-5">
+                        <img src="./media/monocular.png" alt="monocular" width="45px">
+                    </div>
+                </div>
+
+                 <div class="md:w-[18rem] w-full bg-gradient-to-br from-[#293458] via-#293458 to-[#2b012e] rounded-xl shadow-lg text-white p-4">
+                    <h5 class="text-xl font-semibold mb-2">Create profiles for kids</h5>
+                    <p class="text-[15px] text-neutral-200 pt-2">
+                       Send kids on adventures with their favorite characters in a space made just for them — free with your membership.
+                    </p>
+                    <div class="flex justify-end pt-4">
+                        <img src="./media/chat.png" alt="chat" width="45px">
+                    </div>
+                </div>
+
+            </div>
+
+            <!-- faq -->
         </section>
+
 
         <!-- last div -->
     </div>
