--- a/index.html
+++ b/index.html
@@ -192,8 +192,9 @@
             <div class="relative z-5 pt-20 px-4 md:!px-40">
                 <h2 class="text-white font-semibold md:text-2xl text-lg">More Reasons to Join</h2>
             </div>
-            <div class="grid md:grid-cols-4 grid-cols-1 md:!px-40 px-4  py-3 gap-3">
-                <div class=" md:w-[18rem] w-full bg-gradient-to-br from-[#293458] via-#293458 to-[#2b012e] rounded-xl shadow-lg text-white p-4">
+            <div class="grid md:grid-cols-4 grid-cols-1 md:!px-40 px-4  pt-3 gap-3">
+                <div
+                    class=" md:w-[18rem] w-full bg-gradient-to-br from-[#293458] via-#293458 to-[#2b012e] rounded-xl shadow-lg text-white p-4">
                     <h5 class="text-xl font-semibold mb-2">Enjoy on your TV</h5>
                     <p class="text-[15px] text-neutral-200 pt-2">
                         Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.
@@ -204,7 +205,8 @@
                 </div>
 
 
-                 <div class="md:w-[18rem] w-full bg-gradient-to-br from-[#293458] via-#293458 to-[#2b012e] rounded-xl shadow-lg text-white p-4">
+                <div
+                    class="md:w-[18rem] w-full bg-gradient-to-br from-[#293458] via-#293458 to-[#2b012e] rounded-xl shadow-lg text-white p-4">
                     <h5 class="text-xl font-semibold mb-2">Download your shows to watch offline</h5>
                     <p class="text-[15px] text-neutral-200 pt-2">
                         Save your favorites easily and always have something to watch.
@@ -215,7 +217,8 @@
                 </div>
 
 
-                 <div class="md:w-[18rem] w-full bg-gradient-to-br from-[#293458] via-#293458 to-[#2b012e] rounded-xl shadow-lg text-white p-4">
+                <div
+                    class="md:w-[18rem] w-full bg-gradient-to-br from-[#293458] via-#293458 to-[#2b012e] rounded-xl shadow-lg text-white p-4">
                     <h5 class="text-xl font-semibold mb-2">Watch everywhere</h5>
                     <p class="text-[15px] text-neutral-200 pt-2">
                         Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.
@@ -225,10 +228,12 @@
                     </div>
                 </div>
 
-                 <div class="md:w-[18rem] w-full bg-gradient-to-br from-[#293458] via-#293458 to-[#2b012e] rounded-xl shadow-lg text-white p-4">
+                <div
+                    class="md:w-[18rem] w-full bg-gradient-to-br from-[#293458] via-#293458 to-[#2b012e] rounded-xl shadow-lg text-white p-4">
                     <h5 class="text-xl font-semibold mb-2">Create profiles for kids</h5>
                     <p class="text-[15px] text-neutral-200 pt-2">
-                       Send kids on adventures with their favorite characters in a space made just for them — free with your membership.
+                        Send kids on adventures with their favorite characters in a space made just for them — free with
+                        your membership.
                     </p>
                     <div class="flex justify-end pt-4">
                         <img src="./media/chat.png" alt="chat" width="45px">
@@ -238,6 +243,139 @@
             </div>
 
             <!-- faq -->
+            <div class="relative z-5 pt-[4.5rem] px-4 md:!px-40">
+                <h2 class="text-white font-semibold md:text-2xl text-lg">Frequently Asked Questions</h2>
+            </div>
+            <!-- accordion -->
+            <div class="px-4 md:!px-40 pt-6">
+                <div class="w-full mx-auto">
+                    <div class="overflow-hidden mb-2">
+                        <button
+                            class="w-full flex justify-between items-center px-4 md:py-4 py-3 bg-zinc-800 hover:bg-zinc-700 text-white  focus:outline-none md:text-2xl text-lg"
+                            onclick="toggleAccordion(this)">
+                            What is Netflix?
+                            <svg class="md:w-10 w-7 md:h-10 h-7 transform transition-transform duration-300" fill="none"
+                                stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M12 5v14M5 12h14" />
+                            </svg>
+                        </button>
+                        <div
+                            class="accordion-content px-4 py-3 bg-[#111] text-white hidden md:text-2xl text-lg bg-zinc-800 ">
+                            Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies,
+                            anime, documentaries, and more on thousands of internet-connected devices.
+                            <br><br>
+                            You can watch as much as you want, whenever you want without a single commercial – all for
+                            one low monthly price. There's always something new to discover and new TV shows and movies
+                            are added every week!
+                        </div>
+                    </div>
+
+                    <div class="overflow-hidden mb-2">
+                        <button
+                            class="w-full flex justify-between items-center px-4 md:py-4 py-3 bg-zinc-800 hover:bg-zinc-700 text-white  focus:outline-none md:text-2xl text-lg"
+                            onclick="toggleAccordion(this)">
+                            How much does Netflix cost?
+                            <svg class="md:w-10 w-7 md:h-10 h-7 transform transition-transform duration-300" fill="none"
+                                stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M12 5v14M5 12h14" />
+                            </svg>
+                        </button>
+                        <div class="accordion-content px-4 py-3 bg-[#111] text-white hidden md:text-2xl text-lg bg-zinc-800">
+                            Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one
+                            fixed monthly fee. Plans range from AED 35 to AED 71 a month. No extra costs, no contracts.
+                        </div>
+                    </div>
+
+
+                    <div class="overflow-hidden mb-2">
+                        <button
+                            class="w-full flex justify-between items-center px-4 md:py-4 py-3 bg-zinc-800 hover:bg-zinc-700 text-white  focus:outline-none md:text-2xl text-lg"
+                            onclick="toggleAccordion(this)">
+                            Where can I watch?
+                            <svg class="md:w-10 w-7 md:h-10 h-7 transform transition-transform duration-300" fill="none"
+                                stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M12 5v14M5 12h14" />
+                            </svg>
+                        </button>
+                        <div class="accordion-content px-4 py-3 bg-[#111] text-white hidden md:text-2xl text-lg bg-zinc-800">
+                            Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at
+                            netflix.com from your personal computer or on any internet-connected device that offers the
+                            Netflix app, including smart TVs, smartphones, tablets, streaming media players and game
+                            consoles.
+                            <br><br>
+                            You can also download your favorite shows with the iOS or Android app. Use downloads to
+                            watch while you're on the go and without an internet connection. Take Netflix with you
+                            anywhere.
+                        </div>
+                    </div>
+
+                    <div class="overflow-hidden mb-2">
+                        <button
+                            class="w-full flex justify-between items-center px-4 md:py-4 py-3 bg-zinc-800 hover:bg-zinc-700 text-white  focus:outline-none md:text-2xl text-lg"
+                            onclick="toggleAccordion(this)">
+                            How do I cancel?
+                            <svg class="md:w-10 w-7 md:h-10 h-7 transform transition-transform duration-300" fill="none"
+                                stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M12 5v14M5 12h14" />
+                            </svg>
+                        </button>
+                        <div class="accordion-content px-4 py-3 bg-[#111] text-white hidden md:text-2xl text-lg bg-zinc-800">
+                            Netflix is flexible. There are no pesky contracts and no commitments. You can easily cancel
+                            your account online in two clicks. There are no cancellation fees – start or stop your
+                            account anytime.
+                        </div>
+                    </div>
+
+
+                    <div class="overflow-hidden mb-2">
+                        <button
+                            class="w-full flex justify-between items-center px-4 md:py-4 py-3 bg-zinc-800 hover:bg-zinc-700 text-white  focus:outline-none md:text-2xl text-lg"
+                            onclick="toggleAccordion(this)">
+                            What can I watch on Netflix?
+                            <svg class="md:w-10 w-7 md:h-10 h-7 transform transition-transform duration-300" fill="none"
+                                stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M12 5v14M5 12h14" />
+                            </svg>
+                        </button>
+                        <div class="accordion-content px-4 py-3 bg-[#111] text-white hidden md:text-2xl text-lg bg-zinc-800">
+                            Netflix has an extensive library of feature films, documentaries, TV shows, anime,
+                            award-winning Netflix originals, and more. Watch as much as you want, anytime you want.
+                        </div>
+                    </div>
+                    <div class="overflow-hidden mb-2">
+                        <button
+                            class="w-full flex justify-between items-center px-4 md:py-4 py-3 bg-zinc-800 hover:bg-zinc-700 text-white  focus:outline-none md:text-2xl text-lg"
+                            onclick="toggleAccordion(this)">
+                            Is Netflix good for kids?
+                            <svg class="md:w-10 w-7 md:h-10 h-7 transform transition-transform duration-300" fill="none"
+                                stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M12 5v14M5 12h14" />
+                            </svg>
+                        </button>
+                        <div class="accordion-content px-4 py-3 bg-[#111] text-white hidden md:text-2xl text-lg bg-zinc-800">
+                            The Netflix Kids experience is included in your membership to give parents control while
+                            kids enjoy family-friendly TV shows and movies in their own space.
+                            <br><br>
+                            Kids profiles come with PIN-protected parental controls that let you restrict the maturity
+                            rating of content kids can watch and block specific titles you don’t want kids to see.
+                        </div>
+                    </div>
+                    <script>
+                        function toggleAccordion(button) {
+                            const content = button.nextElementSibling;
+                            const icon = button.querySelector('svg');
+
+                            content.classList.toggle('hidden');
+                            icon.classList.toggle('rotate-180');
+                        }
+                    </script>
+                </div>
+            </div>
+
+            
+
+
+
         </section>
 
 
