WIP footer Completed

--- a/index.html
+++ b/index.html
@@ -280,7 +280,8 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M12 5v14M5 12h14" />
                             </svg>
                         </button>
-                        <div class="accordion-content px-4 py-3 bg-[#111] text-white hidden md:text-2xl text-lg bg-zinc-800">
+                        <div
+                            class="accordion-content px-4 py-3 bg-[#111] text-white hidden md:text-2xl text-lg bg-zinc-800">
                             Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one
                             fixed monthly fee. Plans range from AED 35 to AED 71 a month. No extra costs, no contracts.
                         </div>
@@ -297,7 +298,8 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M12 5v14M5 12h14" />
                             </svg>
                         </button>
-                        <div class="accordion-content px-4 py-3 bg-[#111] text-white hidden md:text-2xl text-lg bg-zinc-800">
+                        <div
+                            class="accordion-content px-4 py-3 bg-[#111] text-white hidden md:text-2xl text-lg bg-zinc-800">
                             Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at
                             netflix.com from your personal computer or on any internet-connected device that offers the
                             Netflix app, including smart TVs, smartphones, tablets, streaming media players and game
@@ -319,7 +321,8 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M12 5v14M5 12h14" />
                             </svg>
                         </button>
-                        <div class="accordion-content px-4 py-3 bg-[#111] text-white hidden md:text-2xl text-lg bg-zinc-800">
+                        <div
+                            class="accordion-content px-4 py-3 bg-[#111] text-white hidden md:text-2xl text-lg bg-zinc-800">
                             Netflix is flexible. There are no pesky contracts and no commitments. You can easily cancel
                             your account online in two clicks. There are no cancellation fees – start or stop your
                             account anytime.
@@ -337,7 +340,8 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M12 5v14M5 12h14" />
                             </svg>
                         </button>
-                        <div class="accordion-content px-4 py-3 bg-[#111] text-white hidden md:text-2xl text-lg bg-zinc-800">
+                        <div
+                            class="accordion-content px-4 py-3 bg-[#111] text-white hidden md:text-2xl text-lg bg-zinc-800">
                             Netflix has an extensive library of feature films, documentaries, TV shows, anime,
                             award-winning Netflix originals, and more. Watch as much as you want, anytime you want.
                         </div>
@@ -352,7 +356,8 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M12 5v14M5 12h14" />
                             </svg>
                         </button>
-                        <div class="accordion-content px-4 py-3 bg-[#111] text-white hidden md:text-2xl text-lg bg-zinc-800">
+                        <div
+                            class="accordion-content px-4 py-3 bg-[#111] text-white hidden md:text-2xl text-lg bg-zinc-800">
                             The Netflix Kids experience is included in your membership to give parents control while
                             kids enjoy family-friendly TV shows and movies in their own space.
                             <br><br>
@@ -372,7 +377,87 @@
                 </div>
             </div>
 
-            
+            <div class="flex flex-col items-center justify-center pt-[4rem] w-full">
+                <div class="para text-white md:px-0 px-4">
+                    <p>Ready to watch? Enter your email to create or restart your membership.</p>
+                </div>
+                <div
+                    class="flex mt-3 mb-2 md:w-[55%] w-full items-start md:items-center md:justify-center justify-start md:flex-row flex-col gap-2 md:gap-0 px-4 md:px-0">
+                    <input type="email" placeholder="Email address"
+                        class="md:w-[70%] w-full px-3 py-3 bg-transparent border border-gray-600 !border-[#8c8c8c] placeholder:opacity-95 text-white placeholder-[#8c8c8c] font-semibold rounded-md focus:outline-none focus:ring-1 focus:ring-white focus:ring-offset-1 focus:ring-offset-black" />
+                    <button
+                        class="bg-red-600 font-semibold md:text-2xl text-base text-white px-3 py-[0.8rem] text-center hover:bg-red-700 transition md:w-[25%] w-[50%] flex items-center justify-center"
+                        style="border-radius: 0.3rem;">
+                        Get Started
+                        <span><img src="./media/chevron.png" alt="" width="15px" /></span>
+                    </button>
+                </div>
+
+            </div>
+
+            <!-- footer -->
+            <div class="px-4 md:!px-40 pt-[4rem]">
+                <p class="text-stone-400">Questions? Call <span class="underline cursor-pointer">800-032-0481</span>
+                </p>
+            </div>
+
+            <div class="grid md:grid-cols-4 grid-cols-1 px-4 md:!px-40 pt-[3rem]">
+                <div>
+                    <p class="underline cursor-pointer text-stone-400 pb-3 text-sm">FAQ</p>
+                    <p class="underline cursor-pointer text-stone-400 pb-3 text-sm">Investor Relations</p>
+                    <p class="underline cursor-pointer text-stone-400 pb-3 text-sm">Ways to Watch</p>
+                    <p class="underline cursor-pointer text-stone-400 pb-3 text-sm">Corporate Information</p>
+                    <p class="underline cursor-pointer text-stone-400 pb-3 text-sm">Only on Netflix</p>
+                </div>
+                <div>
+                    <p class="underline cursor-pointer text-stone-400 pb-3 text-sm">Help Center</p>
+                    <p class="underline cursor-pointer text-stone-400 pb-3 text-sm">Jobs</p>
+                    <p class="underline cursor-pointer text-stone-400 pb-3 text-sm">Terms of Use</p>
+                    <p class="underline cursor-pointer text-stone-400 pb-3 text-sm">Contact Us</p>
+                </div>
+                <div>
+                    <p class="underline cursor-pointer text-stone-400 pb-3 text-sm">Account</p>
+                    <p class="underline cursor-pointer text-stone-400 pb-3 text-sm">Redeem Gift Cards</p>
+                    <p class="underline cursor-pointer text-stone-400 pb-3 text-sm">Privacy</p>
+                    <p class="underline cursor-pointer text-stone-400 pb-3 text-sm">Speed Test</p>
+                </div>
+                <div>
+                    <p class="underline cursor-pointer text-stone-400 pb-3 text-sm">Media Center</p>
+                    <p class="underline cursor-pointer text-stone-400 pb-3 text-sm">Buy Gift Cards</p>
+                    <p class="underline cursor-pointer text-stone-400 pb-3 text-sm">Cookie Preferences</p>
+                    <p class="underline cursor-pointer text-stone-400 pb-3 text-sm">Legal Notices</p>
+                </div>
+            </div>
+
+            <div class="px-4 md:!px-40 pt-[3rem]">
+                <div class="dropdown">
+                    <button
+                        class="border md:px-1 px-3 py-1 dropdown-toggle text-white flex items-center rounded-md focus:outline-none focus:ring-1 focus:ring-white focus:ring-offset-1 focus:ring-offset-black"
+                        type="button" data-bs-toggle="dropdown" aria-expanded="false"
+                        style="border-radius: 0.2rem; border-color: gray !important;">
+                        <span class="md:me-2 me-1">
+                            <img src="./media/translate.png" alt="" width="18px" />
+                        </span>
+                        <span class="ms-1 me-2 text-sm md:inline">English</span>
+                    </button>
+                    <ul class="dropdown-menu text-center" style="width: 132px; min-width: unset;">
+                        <li><a class="dropdown-item text-black" href="#">العربية</a></li>
+                        <li><a class="dropdown-item text-white bg-primary" href="#">English</a></li>
+                    </ul>
+                </div>
+                <p class="text-stone-400 text-sm pt-10">Netflix United Arab Emirates</p>
+                <p class="text-stone-400 text-xs pt-10 pb-[9rem]">This page is protected by Google reCAPTCHA to ensure
+                    you're not a bot. <span class="underline text-primary"><a href="#learn"> Learn More</a></span></p>
+
+                <div class="pb-4 md:hidden block">
+                        <button
+                            class="bg-red-600 font-semibold md:text-2xl text-base text-white px-4 py-2 text-center hover:bg-red-700 transition md:w-[25%] w-full flex items-center justify-center"
+                            style="border-radius: 0.2rem;">
+                            Get Started
+                        </button>
+                </div>
+            </div>
+
 
 
 
